<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4fbff">

    <Button
        android:textColor="#fff"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/Button5"
        android:background="@android:drawable/ic_menu_help" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:text="@string/snippers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:layout_weight="0.12"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/snippers1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snippers1"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_weight="0.12"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12">

            <Button
                android:background="@drawable/round_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Open"
                android:textColor="#fff"
                android:layout_marginTop="60dp"
                android:textSize="20sp"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/AbrirP"
                android:layout_weight="1"/>

            <Button
                android:background="@drawable/round_button1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Close"
                android:textColor="#FF3187D4"
                android:layout_marginTop="60dp"
                android:textSize="20sp"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/CerrarP"
                android:layout_weight="1"
                android:layout_marginLeft="20dp" />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/speak"
            android:background="@android:color/transparent"
            android:drawableBottom="@android:drawable/ic_btn_speak_now"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center">
            <Button
                android:id="@+id/BotonLenta"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/lento_nopress_blue_medium"/>
            <Button
                android:id="@+id/BotonMedia"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_toRightOf="@id/BotonLenta"
                android:background="@drawable/medio_nopress_blue_medium"
                android:layout_marginRight="15sp"
                android:layout_marginLeft="15sp"/>
            <Button
                android:id="@+id/BotonRapida"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_toRightOf="@id/BotonMedia"
                android:background="@drawable/rapido_nopress_blue_medium"/>
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commands"
            android:gravity="bottom"
            android:background="#f4fbff"
            android:visibility="invisible">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:elevation="1dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:text="@string/commands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="normal|bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:text="@string/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:text="@string/open_description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="right">

                <TextView
                    android:text="@string/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:text="@string/close_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:text="@string/slow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:text="@string/slow_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:text="@string/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:text="@string/medium_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:text="@string/high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:text="@string/high_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView20"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</RelativeLayout>
