<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4fbff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:textColor="#fff"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/Button5"
            android:background="@android:drawable/ic_menu_help" />

        <TextView
            android:text="@string/nailclippers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/DescripcionContinuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nailclippers1"
            android:textSize="25dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="8sp"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp">

            <Button
                android:background="@drawable/round_button"
                android:text="@string/cortar"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/Cortar" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/speak"
            android:background="@android:color/transparent"
            android:drawableBottom="@android:drawable/ic_btn_speak_now"
            android:layout_weight="0.23" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commands"
            android:gravity="bottom"
            android:background="#f4fbff"
            android:visibility="invisible">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:elevation="1dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:text="@string/commands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="normal|bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:text="@string/cut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:text="@string/cut_description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="right">

                <TextView
                    android:text="@string/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:text="@string/exit_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:text="@string/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:text="@string/exit_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</RelativeLayout>